--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,7 +32,7 @@ steps:
   - |
       if [ $BRANCH_NAME = "develop" ]; then
         cd environments/dev/resource
-        terraform init
+        terraform init || exit 1
           echo ""
           echo "*************** TERRAFORM INIT ******************"
           echo "******* At environment: ${BRANCH_NAME} ********"
@@ -40,7 +40,7 @@ steps:
       fi 
       if [ $BRANCH_NAME = "master" ]; then
         cd environments/pd/resource
-        terraform init
+        terraform init || exit 1
           echo ""
           echo "*************** TERRAFORM INIT ******************"
           echo "******* At environment: ${BRANCH_NAME} ********"
